# mira

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/evals/: __init__.py  conftest.py  run_eval.py  test_eval_chain.py  test_eval_wf1.py  test_eval_wf2.py  test_eval_wf3.py
backend/migrations/: 001_extensions.sql  002_enums.sql  003_profiles.sql  004_org_connections.sql  005_projects.sql  006_use_cases.sql  007_workflows.sql  008_generated_objects.sql  009_chat_messages.sql  010_documents.sql  011_embeddings.sql  012_service_grants.sql  013_make_description_optional.sql  014_diagrams.sql  015_component_library.sql  016_component_library_rls.sql
backend/scripts/: run_migrations.sh  scrape_m3ter_docs.py  seed_embeddings.py  seed_logos.py
backend/tests/: conftest.py  test_account_setup_graph.py  test_account_validation.py  test_api_component_library.py  test_api_diagrams.py  test_api_documents.py  test_api_generated_objects.py  test_api_logos.py  test_api_org_connections.py  test_api_projects.py  test_api_use_cases.py  test_api_workflows.py  test_auth.py  test_auth_middleware.py  test_chat_messages.py  test_chunker.py  test_crawler.py  test_cross_entity.py  test_document_processor.py  test_document_ws.py  test_embeddings.py  test_encryption.py  test_extract_llm_text.py  test_graph.py  test_health.py  test_ingestion.py  test_llm_factory.py  test_measurement_validation.py  test_memory.py  test_memory_decisions.py  (+17 more)
(+406 files in other folders)
